--- a/src/css/main.less
+++ b/src/css/main.less
@@ -1,11 +1,12 @@
 @import "variable.less";
-@import "./mixin/util.less";
+// @import "./mixin/util.less";
 
-@import "reset.less";
-@import "common.less";
+// @import "reset.less";
+// @import "common.less";
 
 // controls
-@import "Button.less";
+// TODO revert
+// @import "Button.less";
 @import "Box.less";
 @import "Select.less";
 @import "TextBox.less";
@@ -24,5 +25,6 @@
 @import "TipLayer.less";
 @import "Tip.less";
 @import "Tree.less";
-@import "selectable.less";
-@import "sidebar.less";
+// TODO revert
+// @import "selectable.less";
+@import "Sidebar.less";
